--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,35 @@ body{
 }
 h3{
     font-family: "Lobster", cursive;
-    margin: 20 px;
 }
 .navbar{
-    background-color: black;
+    background-color: gray;
+    
 }
 .jumbotron{
     margin: 0;
     padding: 20px 0;
+    background-image: linear-gradient(black,gray);
+    color: blanchedalmond;
+}
+.row-content{
+    padding: 50px, 0;
+    border-bottom:1px ridge;
+    min-height: 100px;
+    
+}
+.site-footer{
+    background-image: linear-gradient(gray,black);
+    padding: 20px 0;
+    color: blanchedalmond
+}
+a,a:hover{
+    color: inherit;
+    text-decoration: none;
+}
+.fa {
+    color: blanchedalmond;
+}
+.carousel-caption{
+    background-color: rgba(0,0,0,.4);
 }
